--- a/client/angular.json
+++ b/client/angular.json
@@ -86,6 +86,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.min.css",
               "src/styles.css"
             ],
             "scripts": []
